--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <title>Véletlen szöveg</title>
 </head>
 <body>
- <h1 style="color:red">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1> <span style="color:aqua">Sunt</span> maxime voluptatem molestias ducimus mollitia numquam molestiae incidunt voluptatum consequuntur perspiciatis? Magni veniam ipsam ut vero incidunt sint rerum laborum quia!
- <h2 style="color:blue">Possimus quod at soluta voluptas?</h2> Vel, <span style="color:brown">doloribus</span> repellat facere at illo enim quo voluptatibus quod reiciendis odio corporis sed, expedita libero! Omnis modi blanditiis itaque quis aliquam. Velit, nihil aut?
- <h3 style="color:green">Ex, perspiciatis?</h3> Accusamus nisi <span style="color:powderblue">corporis</span> ea rem minus excepturi magnam quaerat quisquam culpa error porro consequuntur impedit, iusto commodi. Dicta corrupti animi tempore possimus quod in, ullam obcaecati! Placeat, doloribus!
- <h4 style="color:purple">Suscipit dicta rerum eveniet ad.</h4> Optio molestiae possimus <span style="color:seagreen">vitae</span> repellat consequatur in totam officiis fugit dolor doloremque minus eos voluptate provident dolorum laboriosam, delectus perferendis pariatur illo assumenda rem? Vel.
- <h5 style="color:orange">Quis, velit laboriosam cumque.</h5> Consectetur corporis asperiores autem <span style="color:red">ratione</span> dolores ea repellat at quam fugiat rem. Voluptatum laborum magni non voluptatibus ab, in aliquam, modi quis sint ratione earum deleniti.
+    <h1 style="color:red">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1> 
+        <p style="background-color: green;"><span style="color:aqua">Sunt</span> maxime voluptatem molestias ducimus mollitia numquam molestiae incidunt voluptatum consequuntur perspiciatis? Magni veniam ipsam ut vero incidunt sint rerum laborum quia!</p>
+    <h2 style="color:blue">Possimus quod at soluta voluptas?</h2> 
+        <p style="background-color: red;">Vel, <span style="color:brown">doloribus</span> repellat facere at illo enim quo voluptatibus quod reiciendis odio corporis sed, expedita libero! Omnis modi blanditiis itaque quis aliquam. Velit, nihil aut?</p>
+    <h3 style="color:green">Ex, perspiciatis?</h3> 
+        <p style="background-color: dimgray;">Accusamus nisi <span style="color:powderblue">corporis</span> ea rem minus excepturi magnam quaerat quisquam culpa error porro consequuntur impedit, iusto commodi. Dicta corrupti animi tempore possimus quod in, ullam obcaecati! Placeat, doloribus!</p>
+    <h4 style="color:purple">Suscipit dicta rerum eveniet ad.</h4> 
+        <p style="background-color: blue;">Optio molestiae possimus <span style="color:seagreen">vitae</span> repellat consequatur in totam officiis fugit dolor doloremque minus eos voluptate provident dolorum laboriosam, delectus perferendis pariatur illo assumenda rem? Vel.</p>
+    <h5 style="color:orange">Quis, velit laboriosam cumque.</h5> 
+        <p style="background-color: fuchsia;">Consectetur corporis asperiores autem <span style="color:red">ratione</span> dolores ea repellat at quam fugiat rem. Voluptatum laborum magni non voluptatibus ab, in aliquam, modi quis sint ratione earum deleniti.</p>
 </body>
 </html>
